v3.0.9: fix template editing menu display issue in database; align switch--menu

--- a/style/components/misc.scss
+++ b/style/components/misc.scss
@@ -123,6 +123,7 @@
 
 .b3-switch--menu {
     margin: 0;
+    align-self: center;
 
     html[data-theme-mode="light"] .b3-menu__item:hover>& {
         border: 1px solid #ffffff90;
