--- a/style/typography/database.scss
+++ b/style/typography/database.scss
@@ -295,7 +295,7 @@
                     &[data-type="nobg"] {
                         cursor: default;
                         align-items: center;
-                        height: 30px;
+                        // height: 30px;
 
                         .b3-menu__label {
                             font-weight: 500;
@@ -328,7 +328,7 @@
                     }
 
                     &[data-type="goUpdateColType"] {
-                        height: 30px;
+                        // height: 30px;
                         align-items: center;
                         margin-top: 4px;
                     }
